projet_gl/src/test/deca/context/valid/3_72/3_72_1_Method_ident.deca
// Description:
//    Programme minimaliste faisant un method_ident
//
// Resultats:
//
// Historique:
//    cree le 19/01/2024

class A {
    int x(){}
}

{
    A a = new A();
    a.x();
}