projet_gl/src/test/deca/context/invalid/3_65/3_65_3_Selection.deca
// Description:
//    Problème d'accéder au champ protected
//
// Resultats:
//
// Historique:
//    cree le 19/01/2024

class A {
    protected int a;
}

{
    A a = new A();
    a.a;
}